--- a/app/src/main/res/layout/item_app_permission.xml
+++ b/app/src/main/res/layout/item_app_permission.xml
@@ -1,17 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
-            type="com.dongnh.permissionsummary.viewmodel.ItemAppPermissionViewModel"/>
+            type="com.dongnh.permissionsummary.viewmodel.ItemAppPermissionViewModel" />
     </data>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_common"
+        app:cardCornerRadius="@dimen/corner_card_zero"
+        app:cardElevation="@dimen/elevation_cardview"
+        app:cardMaxElevation="@dimen/max_elevation_cardview"
+        app:strokeWidth="@dimen/stroke_width_cardview">
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_height="wrap_content">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="@dimen/height_imageview_account"
+                    android:layout_height="@dimen/height_imageview_account"
+                    android:layout_margin="@dimen/margin_common"
+                    android:contentDescription="@string/app_name"
+                    app:mutableImage="@{viewModel.appPerMission.drawable}"
+                    android:paddingTop="@dimen/nav_header_vertical_spacing" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:text='@{ @string/app_item_name + " " + viewModel.appPerMission.name}'
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:text='@{ @string/app_item_version + " " + viewModel.appPerMission.versionName}'
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:text='@{ @string/app_item_permission_count + " " + viewModel.appPerMission.permissions.size()}'
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </layout>
