--- a/app/src/main/res/layout/item_permision.xml
+++ b/app/src/main/res/layout/item_permision.xml
@@ -50,14 +50,15 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:text='@{ viewModel.namePermission}'
+                        android:textStyle="bold"
                         android:layout_height="wrap_content"/>
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:gravity="end"
+                        android:gravity="start"
                         android:paddingStart="@dimen/margin_common"
                         android:paddingEnd="@dimen/margin_common"
-                        android:layout_gravity="end"
+                        android:layout_gravity="start"
                         android:layout_marginEnd="@dimen/margin_common"
                         app:mutableTextIntColor='@{ viewModel.color }'
                         app:mutableBackgound='@{ viewModel.backgroundItem }'
