--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
 
     <dimen name="height_imageview_account">60dp</dimen>
     <dimen name="height_imageview_detail">40dp</dimen>
+    <dimen name="height_imageview_goto">30dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
 
     <!-- background -->
