Add filter and reload app permission when back from config

--- a/app/src/main/res/layout/fragment_detail_permission.xml
+++ b/app/src/main/res/layout/fragment_detail_permission.xml
@@ -17,6 +17,9 @@
         android:orientation="vertical"
         tools:context=".view.DetailAppFragment">
 
+        <include layout="@layout/action_bar"
+            android:id="@+id/tool_bar"/>
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
