--- a/app/src/main/res/layout/item_list_permission.xml
+++ b/app/src/main/res/layout/item_list_permission.xml
@@ -6,13 +6,15 @@
 
         <variable
             name="viewModel"
-            type="com.dongnh.permissionsummary.viewmodel.ItemPermissionViewModel" />
+            type="com.dongnh.permissionsummary.viewmodel.ItemAppPermissionViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_common"
+        android:layout_marginTop="@dimen/margin_common"
+        android:layout_marginStart="@dimen/margin_common"
+        android:layout_marginEnd="@dimen/margin_common"
         app:cardCornerRadius="@dimen/corner_card_zero"
         app:cardElevation="@dimen/elevation_cardview"
         app:cardMaxElevation="@dimen/max_elevation_cardview"
@@ -21,7 +23,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:orientation="vertical">
 
             <LinearLayout
@@ -33,11 +34,11 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageView"
-                    android:layout_width="@dimen/height_imageview_detail"
-                    android:layout_height="@dimen/height_imageview_detail"
+                    android:layout_width="@dimen/height_imageview_account"
+                    android:layout_height="@dimen/height_imageview_account"
                     android:layout_margin="@dimen/margin_common"
                     android:contentDescription="@string/app_name"
-                    app:mutableImage="@{viewModel.icon}"
+                    app:mutableImage="@{viewModel.appPerMission.drawable}"
                     android:paddingTop="@dimen/nav_header_vertical_spacing" />
 
                 <LinearLayout
@@ -49,20 +50,17 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:text='@{ viewModel.namePermission}'
-                        android:textStyle="bold"
+                        android:text='@{ @string/app_item_name + " " + viewModel.appPerMission.name}'
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:gravity="start"
-                        android:paddingStart="@dimen/margin_common"
-                        android:paddingEnd="@dimen/margin_common"
-                        android:layout_gravity="start"
-                        android:layout_marginEnd="@dimen/margin_common"
-                        app:mutableTextIntColor='@{ viewModel.color }'
-                        app:mutableBackgound='@{ viewModel.backgroundItem }'
-                        app:mutableTextString='@{ viewModel.granted }'
+                        android:layout_width="match_parent"
+                        android:text='@{ @string/app_item_version + " " + viewModel.appPerMission.versionName}'
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:text='@{ @string/app_item_permission_count + " " + viewModel.appPerMission.permissions.size()}'
                         android:layout_height="wrap_content"/>
 
                 </LinearLayout>
