--- a/app/src/main/res/layout/fragment_detail_permission.xml
+++ b/app/src/main/res/layout/fragment_detail_permission.xml
@@ -68,7 +68,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text='@{ @string/app_item_name + " " + viewModel.appPermission.name}' />
+                                android:text='@{ viewModel.appPermission.name}' />
 
                             <TextView
                                 android:layout_width="match_parent"
